[tool.poetry]
name = "anki"
version = "0.1.0"
description = ""
authors = ["felgueres <pablofelgueres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.7"
ai-utils = {path = "../ai_utils"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
